--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "graphql-request": "^7.1.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
+    "react-bootstrap-icons": "^1.11.4",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
