--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-dom": "^18.3.0",
     "@types/react-router-dom": "^5.3.3",
     "bootstrap": "^5.3.3",
+    "graphql": "^16.9.0",
     "graphql-request": "^7.1.0",
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
@@ -25,14 +26,14 @@
     "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
     "react-syntax-highlighter": "^15.5.0",
-    "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "generate": "graphql-codegen --config codegen.ts --watch"
   },
   "eslintConfig": {
     "extends": [
@@ -53,6 +54,18 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@graphql-codegen/cli": "^5.0.2",
+    "@graphql-codegen/schema-ast": "^4.1.0",
+    "@graphql-codegen/typescript": "^4.0.9",
+    "@graphql-codegen/typescript-operations": "^4.2.3",
+    "@parcel/watcher": "^2.4.1",
+    "@types/react-syntax-highlighter": "^15.5.13",
+    "eslint-plugin-react-hooks": "^4.6.2",
+    "get-graphql-schema": "^2.1.2",
+    "typescript": "^5.6.2"
+  },
+  "overrides": {
+    "typescript": "^5.6.2"
   }
 }
